--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
     <!-- Include the compiled Ratchet JS -->
     <script src="js/ratchet.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.25.3/moment.js"></script>
+
 </head>
 
 
