--- a/plant.html
+++ b/plant.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Ratchet template page</title>
+    <title>Plantastic</title>
 
     <!-- Sets initial viewport load and disables zooming  -->
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
@@ -19,6 +19,7 @@
 
     <!-- Include the compiled Ratchet JS -->
     <script src="js/ratchet.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.25.3/moment.js"></script>
 </head>
 
 
@@ -61,8 +62,9 @@
             </a>
         </nav>
     </div>
-
+<script src="main.js"></script>
     <script src="plant.js"></script>
+    
 </body>
 
 </html>
