inpvalues to array and store it

--- a/addplant.html
+++ b/addplant.html
@@ -98,8 +98,6 @@
                 -->
         </div>
 
-
-
     </div>
     <nav class="bar bar-tab">
         <a class="tab-item" href="today.html" data-ignore="push">
@@ -116,7 +114,7 @@
         </a>
     </nav>
     </div>
-
+    <script src="main.js"></script>
     <script src="addplant.js"></script>
 </body>
 
