localstorage is working

--- a/addplant.html
+++ b/addplant.html
@@ -19,6 +19,7 @@
 
     <!-- Include the compiled Ratchet JS -->
     <script src="js/ratchet.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.25.3/moment.js"></script>
 </head>
 
 
@@ -33,7 +34,7 @@
                 <span class="cancel-button">Cancel</span>
             </a>
             <h1 class="title">Add plant</h1>
-            <a class="btn btn-link btn-nav pull-right btn-dots" data-ignore="push" href="#" >
+            <a class="btn btn-link btn-nav pull-right btn-dots" data-ignore="push" href="#" onclick="addPlant()">
                 <span class="save-button">Save</span>
             </a>
 
