--- a/addplant.html
+++ b/addplant.html
@@ -33,7 +33,7 @@
                 <span class="cancel-button">Cancel</span>
             </a>
             <h1 class="title">Add plant</h1>
-            <a class="btn btn-link btn-nav pull-right btn-dots" data-ignore="push" href="#" >
+            <a class="btn btn-link btn-nav pull-right btn-dots" data-ignore="push" href="#" onclick="return savePlantsLocalStorage()">
                 <span class="save-button">Save</span>
             </a>
 
