--- a/today.html
+++ b/today.html
@@ -46,6 +46,7 @@
         <nav class="bar bar-tab">
             <a class="tab-item" href="today.html" data-ignore="push">
                 <i class="fas fa-clock"></i>
+                <span class="badge">3</span>
             </a>
             <a class="tab-item" href="addplant.html" data-ignore="push">
                 <i class="fas fa-plus"></i>
