red dot on the right pages

--- a/today.html
+++ b/today.html
@@ -45,7 +45,7 @@
         </div>
         <nav class="bar bar-tab">
             <a class="tab-item notification" href="today.html" data-ignore="push">
-                <i class="fas fa-clock "><span class="hideBadge badge" id="redBadge"></span></i>
+                <i class="fas fa-clock "><span class="hideBadge redBadge" id="redBadge"></span></i>
             </a>
             <a class="tab-item" href="addplant.html" data-ignore="push">
                 <i class="fas fa-plus"></i>
