--- a/addplant.html
+++ b/addplant.html
@@ -100,8 +100,8 @@
 
     </div>
     <nav class="bar bar-tab">
-        <a class="tab-item" href="today.html" data-ignore="push">
-            <i class="fas fa-clock"></i>
+        <a class="tab-item notification" href="today.html" data-ignore="push">
+            <i class="fas fa-clock "><span class="hideBadge redBadge" id="redBadge"></span></i>
         </a>
         <a class="tab-item" href="addplant.html" data-ignore="push">
             <i class="fas fa-plus"></i>
