--- a/index.html
+++ b/index.html
@@ -42,14 +42,11 @@
             </ul>
 
 
-
+<a class="addButton" href="addplant.html" data-ignore="push"><img id="addButton" src="img/plusicon.svg" alt="plus icon"></a>
         </div>
         <nav class="bar bar-tab">
             <a class="tab-item notification" href="today.html" data-ignore="push">
                 <i class="fas fa-clock "><span class="hideBadge redBadge" id="redBadge"></span></i>
-            </a>
-            <a class="tab-item" href="addplant.html" data-ignore="push">
-                <i class="fas fa-plus"></i>
             </a>
             <a class="tab-item" href="index.html" data-ignore="push">
                 <i class="fas fa-seedling"></i>
