--- a/plant.html
+++ b/plant.html
@@ -35,7 +35,7 @@
             </a>
             <h1 class="title">My Plants</h1>
             <a class="btn btn-link btn-nav pull-right btn-dots" data-ignore="push" href="#">
-                <span class="save-button">Edit</span>
+                <span class="save-button" onclick="deletePlant()">Delete</span>
             </a>
 
         </header>
@@ -46,21 +46,20 @@
             
            <!--html for this part is created in JS-->
 
-        </div>
-        <nav class="bar bar-tab">
-            <a class="tab-item notification" href="today.html" data-ignore="push">
-                <i class="fas fa-clock "><span class="hideBadge redBadge" id="redBadge"></span></i>
-            </a>
-            <a class="tab-item" href="addplant.html" data-ignore="push">
-                <i class="fas fa-plus"></i>
-            </a>
-            <a class="tab-item" href="index.html" data-ignore="push">
-                <i class="fas fa-seedling"></i>
-            </a>
-            <a class="tab-item" href="#" data-ignore="push">
-                <i class="fas fa-ellipsis-h"></i>
-            </a>
-        </nav>
+    <a class="addButton" href="addplant.html" data-ignore="push"><img id="addButton" src="img/plusicon.svg"
+            alt="plus icon"></a>
+    </div>
+    <nav class="bar bar-tab">
+        <a class="tab-item notification" href="today.html" data-ignore="push">
+            <i class="fas fa-clock "><span class="hideBadge redBadge" id="redBadge"></span></i>
+        </a>
+        <a class="tab-item" href="index.html" data-ignore="push">
+            <i class="fas fa-seedling"></i>
+        </a>
+        <a class="tab-item" href="#" data-ignore="push">
+            <i class="fas fa-ellipsis-h"></i>
+        </a>
+    </nav>
     </div>
 <script src="main.js"></script>
     <script src="plant.js"></script>
