plants can be removed - delete button is working

--- a/addplant.html
+++ b/addplant.html
@@ -100,12 +100,12 @@
 
     </div>
     <nav class="bar bar-tab">
-        <a class="tab-item notification" href="today.html" data-ignore="push">
+      <a class="tab-item notification" href="today.html" data-ignore="push">
             <i class="fas fa-clock "><span class="hideBadge redBadge" id="redBadge"></span></i>
         </a>
-        <a class="tab-item" href="addplant.html" data-ignore="push">
+    <!--  <a class="tab-item" href="addplant.html" data-ignore="push">
             <i class="fas fa-plus"></i>
-        </a>
+        </a>-->
         <a class="tab-item" href="index.html" data-ignore="push">
             <i class="fas fa-seedling"></i>
         </a>
