js almost ready

--- a/addplant.html
+++ b/addplant.html
@@ -30,7 +30,7 @@
             <a class="btn btn-link btn-nav pull-left" data-ignore="push" href="index.html">
                 <span class="cancel-button">Cancel</span>
             </a>
-            <h1 class="title">Add plant</h1>
+            <h1 id="pageHeader" class="title"></h1>
 
             <a class="btn btn-link btn-nav pull-right btn-dots" data-ignore="push" href="#" onclick="addPlant()">
 
