--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </ul>
 
 
-<a class="addButton" href="addplant.html" data-ignore="push"><img id="addButton" src="img/plusicon.svg" alt="plus icon"></a>
+<a id="addButton" class="addButton" href="addplant.html" data-ignore="push"><img src="img/plusicon.svg" alt="plus icon"></a>
         </div>
         <nav class="bar bar-tab">
             <a class="tab-item notification" href="today.html" data-ignore="push">
