--- a/plant.html
+++ b/plant.html
@@ -46,7 +46,7 @@
             
            <!--html for this part is created in JS-->
 
-    <a class="addButton" href="addplant.html" data-ignore="push"><img id="addButton" src="img/plusicon.svg"
+    <a  id="addButton" class="addButton" href="addplant.html?plant=" data-ignore="push"><img id="addButton" src="img/plusicon.svg"
             alt="plus icon"></a>
     </div>
     <nav class="bar bar-tab">
