--- a/today.html
+++ b/today.html
@@ -42,7 +42,7 @@
 
 
 
-        <a class="addButton" href="addplant.html" data-ignore="push"><img id="addButton" src="img/plusicon.svg"
+        <a id="addButton" class="addButton" href="addplant.html" data-ignore="push"><img  src="img/plusicon.svg"
                 alt="plus icon"></a>
         </div>
         <nav class="bar bar-tab">
