modal window for delete message is not to our format

--- a/addplant.html
+++ b/addplant.html
@@ -100,12 +100,10 @@
 
     </div>
     <nav class="bar bar-tab">
-      <a class="tab-item notification" href="today.html" data-ignore="push">
-            <i class="fas fa-clock "><span class="hideBadge redBadge" id="redBadge"></span></i>
+        <a class="tab-item notification" href="today.html" data-ignore="push">
+            <i class="fas fa-clock "><span class="hideBadge redBadge" id="redBadge"><img class="redBadge"
+                        src="img/red-icon-SVG.svg" alt="plus icon"></span></i>
         </a>
-    <!--  <a class="tab-item" href="addplant.html" data-ignore="push">
-            <i class="fas fa-plus"></i>
-        </a>-->
         <a class="tab-item" href="index.html" data-ignore="push">
             <i class="fas fa-seedling"></i>
         </a>
@@ -113,6 +111,7 @@
             <i class="fas fa-ellipsis-h"></i>
         </a>
     </nav>
+    
     </div>
     <script src="main.js"></script>
     <script src="addplant.js"></script>
