--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
             </ul>
 
 
-<a id="addButton" class="addButton" href="addplant.html" data-ignore="push"><img src="img/plusicon.svg" alt="plus icon"></a>
+<a class="addButton" href="addplant.html" data-ignore="push"><img src="img/plusicon.svg" alt="plus icon"></a>
         </div>
         <nav class="bar bar-tab">
             <a class="tab-item notification" href="today.html" data-ignore="push">
-                <i class="fas fa-clock "><span class="hideBadge redBadge" id="redBadge"></span></i>
+                <i class="fas fa-clock "><span class="hideBadge redBadge" id="redBadge"><img class="redBadge" src="img/red-icon-SVG.svg" alt="plus icon"></span></i>
             </a>
             <a class="tab-item" href="index.html" data-ignore="push">
                 <i class="fas fa-seedling"></i>
