--- a/today.html
+++ b/today.html
@@ -47,7 +47,8 @@
         </div>
         <nav class="bar bar-tab">
             <a class="tab-item notification" href="today.html" data-ignore="push">
-                <i class="fas fa-clock "><span class="hideBadge redBadge" id="redBadge"></span></i>
+                <i class="fas fa-clock "><span class="hideBadge redBadge" id="redBadge"><img class="redBadge"
+                            src="img/red-icon-SVG.svg" alt="plus icon"></span></i>
             </a>
             <a class="tab-item" href="index.html" data-ignore="push">
                 <i class="fas fa-seedling"></i>
