--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <link rel="stylesheet" href="main.css">
 
     <!-- Include the compiled Ratchet JS -->
-    
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.25.3/moment.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.25.3/moment.js"></script>
 
 </head>
 
@@ -42,11 +42,13 @@
             </ul>
 
 
-<a class="addButton" href="addplant.html" data-ignore="push"><img src="img/plusicon.svg" alt="plus icon"></a>
+            <a id="addButton" href="addplant.html" data-ignore="push"><img src="img/plusicon.svg"
+                    alt="plus icon"></a>
         </div>
         <nav class="bar bar-tab">
             <a class="tab-item notification" href="today.html" data-ignore="push">
-                <i class="fas fa-clock "><span class="hideBadge redBadge" id="redBadge"><img class="redBadge" src="img/red-icon-SVG.svg" alt="plus icon"></span></i>
+                <i class="fas fa-clock "><span class="hideBadge redBadge" id="redBadge"><img class="redBadge"
+                            src="img/red-icon-SVG.svg" alt="plus icon"></span></i>
             </a>
             <a class="tab-item" href="index.html" data-ignore="push">
                 <i class="fas fa-seedling"></i>
