with various bgs

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         </header>
 
         <!-- Wrap all non-bar HTML in the .content div (this is actually what scrolls) -->
-        <div class="content">
+        <div class="content bggreenleaves">
 
-            <ul id="myPlantList" class="table-view plant-list">
+            <ul id="myPlantList" class="table-view plant-list ">
 
             </ul>
 
