--- a/today.html
+++ b/today.html
@@ -34,7 +34,7 @@
         </header>
 
         <!-- Wrap all non-bar HTML in the .content div (this is actually what scrolls) -->
-        <div class="content">
+        <div class="content bggreenleaves">
 
             <ul id="myPlantList" class="table-view plant-list">
 
