--- a/addplant.html
+++ b/addplant.html
@@ -40,7 +40,7 @@
         </header>
 
         <!-- Wrap all non-bar HTML in the .content div (this is actually what scrolls) -->
-        <div id="content" class="content plant-details bgwhiteleaves">
+        <div id="content" class="content plant-details bgnoleaves">
 <!--
             <div>
                 <img class="photo" src="img/plant2.jpg" alt="plant photo">
