--- a/plant.html
+++ b/plant.html
@@ -42,7 +42,7 @@
 
         <!-- Wrap all non-bar HTML in the .content div (this is actually what scrolls) -->
         
-        <div id="content" class="content plant-details bgwhiteleaves">
+        <div id="content" class="content plant-details bgnoleaves">
             
 
             <div id="myModal" class="modal1">
