--- a/plant.html
+++ b/plant.html
@@ -59,7 +59,7 @@
 
     
     </div>
-    <a id="addButton" href="addplant.html" data-ignore="push"><img src="img/plusbtntransparentbg.svg" alt="plus icon"></a>
+    <a id="addButton" href="addplant.html" data-ignore="push"><img src="img/editicon.svg" alt="plus icon"></a>
     <nav class="bar bar-tab">
         <a class="tab-item notification" href="today.html" data-ignore="push">
             <img src="img/scheduleicondeactive.svg" alt="plus icon"><span class="hideBadge redBadge" id="redBadge"><img
