--- a/addplant.html
+++ b/addplant.html
@@ -32,7 +32,7 @@
             </a>
             <h1 id="pageHeader" class="title"></h1>
 
-            <a class="btn btn-link btn-nav pull-right btn-dots" data-ignore="push" href="#" onclick="addPlant()">
+            <a class="btn btn-link btn-nav pull-right btn-dots saveBtn" data-ignore="push" href="#" onclick="addPlant()">
 
                 <span class="save-button">Save</span>
             </a>
