--- a/plant.html
+++ b/plant.html
@@ -34,7 +34,7 @@
                 <span class="icon icon-left-nav"></span>
             </a>
             <h1 class="title">My Plants</h1>
-            <a class="btn btn-link btn-nav pull-right btn-dots" data-ignore="push" href="#">
+            <a class="btn btn-link btn-nav pull-right btn-dots saveBtn" data-ignore="push" href="#">
                 <span class="save-button" onclick="deletePlant()">Delete</span>
             </a>
 
