--- a/addplant.html
+++ b/addplant.html
@@ -27,7 +27,7 @@
     <div class="mainDiv">
         <!-- Make sure all your bars are the first things in your <body> -->
         <header class="bar bar-nav">
-            <a class="btn btn-link btn-nav pull-left" data-ignore="push" href="index.html">
+            <a class="btn btn-link btn-nav pull-left cancelBtn" data-ignore="push" href="index.html">
                 <span class="cancel-button">Cancel</span>
             </a>
             <h1 id="pageHeader" class="title"></h1>
