--- a/addplant.html
+++ b/addplant.html
@@ -27,7 +27,7 @@
     <div class="mainDiv">
         <!-- Make sure all your bars are the first things in your <body> -->
         <header class="bar bar-nav">
-            <a class="btn btn-link btn-nav pull-left cancelBtn" data-ignore="push" href="index.html">
+            <a class="btn btn-link btn-nav pull-left cancelBtn" data-ignore="push"  onclick="window.history.go(-1); return false;">
                 <span class="cancel-button">Cancel</span>
             </a>
             <h1 id="pageHeader" class="title"></h1>
@@ -107,7 +107,7 @@
     
         </a>
         <a class="tab-item" href="index.html" data-ignore="push">
-            <img src="img/plantsiconActive.svg" alt="plus icon">
+            <img src="img/plantsicondeactive.svg" alt="plus icon">
     
         </a>
         <a class="tab-item" href="#" data-ignore="push">
