--- a/index.html
+++ b/index.html
@@ -35,11 +35,9 @@
         </header>
 
         <!-- Wrap all non-bar HTML in the .content div (this is actually what scrolls) -->
-        <div class="content bggreenleaves">
+        <div id="contentBG" class="content">
 
-            <ul id="myPlantList" class="table-view plant-list ">
-
-            </ul>
+            <ul id="myPlantList" class="table-view plant-list "/>
 
 
             
