--- a/plant.html
+++ b/plant.html
@@ -30,7 +30,7 @@
     <div id="mainDiv" class="mainDiv">
         <!-- Make sure all your bars are the first things in your <body> -->
         <header class="bar bar-nav">
-            <a  onclick="window.history.go(-1); return false;" class="btn btn-link btn-nav pull-left cancelBtn" data-ignore="push" href="index.html">
+            <a class="btn btn-link btn-nav pull-left cancelBtn" data-ignore="push" href="index.html">
                 <span class="icon icon-left-nav"></span>
             </a>
             <h1 class="title">My Plants</h1>
@@ -68,7 +68,7 @@
     
         </a>
         <a class="tab-item" href="index.html" data-ignore="push">
-            <img src="img/plantsiconActive.svg" alt="plus icon">
+            <img src="img/plantsicondeactive.svg" alt="plus icon">
     
         </a>
         <a class="tab-item" href="#" data-ignore="push">
