--- a/plant.html
+++ b/plant.html
@@ -16,7 +16,7 @@
     <script src="https://kit.fontawesome.com/9240eef849.js" crossorigin="anonymous"></script>
     <link href="css/ratchet.css" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
-
+<link rel="icon" href="img/favicon.png">
     <!-- Include the compiled Ratchet JS -->
   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.25.3/moment.js"></script>
