--- a/addplant.html
+++ b/addplant.html
@@ -17,6 +17,7 @@
     <link href="css/ratchet.css" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
 <link rel="icon" href="img/favicon.png">
+<link rel="manifest" href="/manifest.webmanifest">
     <!-- Include the compiled Ratchet JS -->
    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.25.3/moment.js"></script>
